pyconde/static_media/css/_header.less
#header {
    background: #FFF;
    background: rgba(255, 255, 255, 0.75);
    position: relative;
    min-height: 300px;
    font-size: 12px;
    margin-bottom: 10px;
    a {
        font-weight: bold;
    }
}
.header-data {
    position: absolute;
    right: 90px;
    width: 393px;
    height: 298px;
    top: -15px;
    left: auto;
    padding: 0;
}
#pyconlogo h1 a{display:block; height:200px; margin:0; text-indent: -2000px; overflow:hidden; 
    background-attachment: scroll;
    background-repeat: no-repeat;
    background-clip: border-box;
    background-color: transparent;
    background-image: url("/@{base-img-url}/logo-2012.png");
    background-origin: padding-box;
    background-position: 5% 50%;
}
#pyconlogo_print{display:none}


#news-top {
    .news-header {
        border-bottom:1px solid #484848;
        height:40px;
        margin-bottom: 10px;

        h2 { 
            font-size: 15px;
            padding: 10px;
            text-transform: uppercase;
            color:#515151;
        }
    }
    ul {margin-left:0;
        li { list-style-image: none;list-style-position: outside;list-style-type: none;
            a {display:block;text-decoration:none;
                width:100%;
                overflow: hidden;
            }
        }
    }
    .date {
        background: transparent url("/@{base-img-url}/trennen.gif") right 6px no-repeat;
        float: left;
        height: 46px;
        padding: 5px 0 0 0;
        width: 125px;
        color: @red;
        .start-date, .end-date, .sep {
            float: left;
            width: 60px;
            display: block;
        }
        .start-date {
            margin-left: 32px;
        }
        &.as-span {
            width: 125px;
            .start-date, .end-date, .sep {
                margin-left: 0;
            }
            .sep {
                width: 5px;
                font-weight: bold;
                font-size: 200%;
                line-height: 46px;
            }
        }
        .month, .day {
            display: block;
            color: #9C1006;
            font-weight: bold;
            text-align: center;
            line-height: 140%;
            padding-bottom: 0.3em;
        }
        .month {
            font-size: 10px;
            margin: 0;
        }
        .day {
            font-size: 30px;
            margin: -8px 0 0 0;
        }
    } // #news-top .date
    a:hover {
        .date .day {
           color: #515151;    
        }
        .description {
            color: #9C1006;
        }
    }
    .description {
        color: #3E3E3E;
        margin: 0 0 0 87px;
        padding: 7px 20px 23px 10px;
        height: 41px;
        display: table;
        line-height: 140%;
        width: 203px;
        font-size: 13px;
        .ie7 & {
            padding-top: 16px;        
        }
        span {
            display: table-cell;
            height: 41px;
            vertical-align: middle;
        }
    }
    .empty {
        display: block;
        text-align: center;
        font-weight: bold;
        color: #3E3E3E;
        margin: 2em 0;
    }
    ul.without-range {
        .date {
            width: 65px;
            .start-date {
                margin-left: 0;
                width: 65px;
            }
        }
        .description {
            width: 173px;
            padding-left: 0;
        }
    }
} // #news-top

.header-claim {
    color: #9C1006;
    float:right;
    font-size:16px;
}

